ci/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shortaf
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
